BE: Implement rate limit algorithm
